Add new internationalization messages

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -42,7 +42,8 @@
   "two_weeks": "Zwei Wochen",
   "week": "Woche",
   "month": "Monat",
-  "no_activity_found": "Keine Aktivität an diesem Tag gefunden"
+  "no_activity_found": "Keine Aktivität an diesem Tag gefunden",
+  "all_checked": "Alles überprüft!"
 
 
 
