--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -42,7 +42,8 @@
   "two_weeks": "Deux semaines",
   "week": "Semaine",
   "month": "Mois",
-  "no_activity_found": "Aucune activité trouvée ce jour-là"
+  "no_activity_found": "Aucune activité trouvée ce jour-là",
+  "all_checked": "Tout vérifié!"
 
 
 
