--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -42,7 +42,8 @@
   "two_weeks": "Due settimane",
   "week": "Settimana",
   "month": "Mese",
-  "no_activity_found": "Nessuna attività trovata in questo giorno"
+  "no_activity_found": "Nessuna attività trovata in questo giorno",
+  "all_checked": "Tutto verificato!"
 
 
 
