--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -42,7 +42,8 @@
   "two_weeks": "2週間",
   "week": "週",
   "month": "月",
-  "no_activity_found": "この日に活動が見つかりませんでした"
+  "no_activity_found": "この日に活動が見つかりませんでした",
+  "all_checked": "全て確認済み！"
 
 
 
