--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -42,7 +42,8 @@
   "two_weeks": "Duas semanas",
   "week": "Semana",
   "month": "Mês",
-  "no_activity_found": "Nenhuma atividade encontrada neste dia"
+  "no_activity_found": "Nenhuma atividade encontrada neste dia",
+  "all_checked": "Tudo verificado!"
 
 
 }
