--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -42,7 +42,8 @@
   "two_weeks": "两周",
   "week": "周",
   "month": "月",
-  "no_activity_found": "当天未找到任何活动"
+  "no_activity_found": "当天未找到任何活动",
+  "all_checked": "全部已检查"
 
 
 
