--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -43,7 +43,8 @@
   "week": "Woche",
   "month": "Monat",
   "no_activity_found": "Keine Aktivität an diesem Tag gefunden",
-  "all_checked": "Alles überprüft!"
+  "all_checked": "Alles überprüft!",
+  "checked": "Überprüft"
 
 
 
