--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -43,7 +43,8 @@
   "week": "Settimana",
   "month": "Mese",
   "no_activity_found": "Nessuna attività trovata in questo giorno",
-  "all_checked": "Tutto verificato!"
+  "all_checked": "Tutto verificato!",
+  "checked": "verificato"
 
 
 
