--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -43,7 +43,8 @@
   "week": "週",
   "month": "月",
   "no_activity_found": "この日に活動が見つかりませんでした",
-  "all_checked": "全て確認済み！"
+  "all_checked": "全て確認済み！",
+  "checked": "確認済み"
 
 
 
