Rename Item and bug fix
- Renames item to activity throughout source code
- Updates dismissible activity key to use a UniqueKey, preventing errors with duplicated activities names
- Changes the way the time of day are displayed in text form on settings according to the selected language
- Adds an error snackbar in case an error occur when trying to save a new activity
- Enables Android OnBackInvokedCallback in this project

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -28,12 +28,13 @@
 
   "add_activity": "Aktivität hinzufügen",
   "add": "Hinzu",
-  "enter_your_activity_description": "Geben Sie hier Ihre Aktivitätsbeschreibung ein",
+  "activity_description": "Aktivitätsbeschreibung",
   "description_required": "Die Beschreibung ist erforderlich",
   "already_did_it_today": "Heute schon gemacht",
   "discard": "Verwerfen",
   "confirm": "Bestätigen",
   "not_checked": "Nicht geprüft",
+  "an_error_has_occurred": "Ein Fehler ist aufgetreten, bitte versuche es erneut.",
 
   "general_reminder_update_now": "Haben Sie etwas Neues auf Ihrer Liste zu überprüfen? Jetzt aktualisieren!",
   "notification_example": "Dies ist ein Beispiel für eine Benachrichtigung! Hat es Ihnen gefallen? 🙂",
